--- a/content/post/bibliography.bib
+++ b/content/post/bibliography.bib
@@ -19,3 +19,62 @@
   year={2010},
   publisher={National Acad Sciences}
 }
+
+
+@book{ajzen1980understanding,
+  title = {Understanding Attitudes and Predicting Social Behavior},
+  author = {Ajzen, Icek and Fishbein, Martin},
+  year = {1980},
+  volume = {278},
+  publisher = {{Prentice-hall Englewood Cliffs, NJ}}
+}
+
+@article{reineckeApplicationTheoryPlanned1996,
+  title = {Application of the {{Theory}} of {{Planned Behavior}} to {{Adolescents}}' {{Condom Use}}: {{A Panel Study1}}},
+  shorttitle = {Application of the {{Theory}} of {{Planned Behavior}} to {{Adolescents}}' {{Condom Use}}},
+  author = {Reinecke, Jost and Schmidt, Peter and Ajzen, Icek},
+  year = {1996},
+  volume = {26},
+  pages = {749--772},
+  issn = {1559-1816},
+  doi = {10.1111/j.1559-1816.1996.tb01128.x},
+  abstract = {The authors report a longitudinal study of factors determining use of condoms with new sexual partners in a representative sample of 650 German youth. Measures derived from the theory of planned behavior (Ajzen, 1985) were obtained in 2 waves separated by 1 year. Consistent with the theory, intentions to use condoms could be predicted from attitudes, subjective norms, and perceived behavioral control with respect to this behavior; and actual condom use was strongly related to intentions and perceptions of control assessed in Wave 2. Due to changes in beliefs and attitudes over time, only about 10\% of the variance in reported condom use was accounted for by intentions and perceived control assessed 1 year earlier. Reported condom use was found to exert a direct effect on later intentions, unmediated by their hypothesized antecedents. Theoretical and practical implications of these findings are discussed.},
+  file = {C\:\\Users\\lissa102\\Zotero\\storage\\EVI5TXGB\\Reinecke et al_1996_Application of the Theory of Planned Behavior to Adolescents’ Condom Use.pdf;C\:\\Users\\lissa102\\Zotero\\storage\\7KHYXY5X\\j.1559-1816.1996.tb01128.html},
+  journal = {Journal of Applied Social Psychology},
+  language = {en},
+  number = {9}
+}
+
+@article{vanlissaTeacherCornerEvaluating2020,
+  title = {Teacher's {{Corner}}: {{Evaluating Informative Hypotheses Using}} the {{Bayes Factor}} in {{Structural Equation Models}}},
+  shorttitle = {Teacher's {{Corner}}},
+  author = {Van Lissa, Caspar J. and Gu, Xin and Mulder, Joris and Rosseel, Yves and Zundert, Camiel Van and Hoijtink, Herbert},
+  year = {2020},
+  month = may,
+  volume = {0},
+  pages = {1--10},
+  publisher = {{Routledge}},
+  issn = {1070-5511},
+  doi = {10.1080/10705511.2020.1745644},
+  abstract = {This Teacher's Corner paper introduces Bayesian evaluation of informative hypotheses for structural equation models, using the free open-source R packages bain, for Bayesian informative hypothesis testing, and lavaan, a widely used SEM package. The introduction provides a brief non-technical explanation of informative hypotheses, the statistical underpinnings of Bayesian hypothesis evaluation, and the bain algorithm. Three tutorial examples demonstrate informative hypothesis evaluation in the context of common types of structural equation models: 1) confirmatory factor analysis, 2) latent variable regression, and 3) multiple group analysis. We discuss hypothesis formulation, the interpretation of Bayes factors and posterior model probabilities, and sensitivity analysis.},
+  journal = {Structural Equation Modeling: A Multidisciplinary Journal},
+  keywords = {Bain,bayes factor,informative hypotheses,structural equation modeling},
+  number = {0}
+}
+
+
+@article{vanlissaWORCSWorkflowOpen2020,
+  title = {{{WORCS}}: {{A Workflow}} for {{Open Reproducible Code}} in {{Science}}},
+  shorttitle = {{{WORCS}}},
+  author = {Van Lissa, Caspar J. and Brandmaier, Andreas M. and Brinkman, Loek and Lamprecht, Anna-Lena and Peikert, Aaron and Struiksma, Marijn E. and Vreede, Barbara},
+  year = {2020},
+  month = may,
+  publisher = {{OSF}},
+  doi = {10.17605/OSF.IO/ZCVBS},
+  abstract = {Hosted on the Open Science Framework},
+  file = {C\:\\Users\\lissa102\\Zotero\\storage\\4A72PMFS\\zcvbs.html},
+  language = {en}
+}
+
+
+
